# stitch_generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  change_imports.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
designs/: parameter.py  waves.py
doc/: basic_concepts.md  exporting_designs.md  list_of_decorative_stitches.md  list_of_stitch_effects.md  paths.md  sampling_functions.md  subdivision_functions.md
file_io/: embroidery_export.py  embroidery_import.py
lib/: calculate_direction.py  embroidery_pattern.py  function_modifiers.py  functions_1d.py  functions_2d.py  inverse_cdf.py  linspace.py  pattern_generator.py  repeat_with_offset.py  sample.py
stitch_effects/: rotate.py  running_stitch.py  smooth.py  variable_running_stitch.py
stitch_generator/collection/: sampling_with_offset_function.py  stitch_effects.py  tatami_sampling.py  underlay_contour_zigzag.py  underlay_dense.py
stitch_generator/design_utilities/: cli.py  design_collection.py  embroidery_design.py  export_all_designs.py  parameter.py  template.py
stitch_generator/designs/: decorative_stitches.py  design_collection.py  elevation.py  embroidery_design.py  lattice.py  lissajous.py  motif_stitches.py  noise_spiral.py  palette.py  satin.py  satin_samples.py  stitch_effects.py  variable_running_stitch.py  wave_paths.py  waves.py
stitch_generator/file_io/: embroidery_export.py  embroidery_import.py
stitch_generator/framework/: __init__.py  cli.py  embroidery_design.py  embroidery_pattern.py  exceptions.py  parameter.py  path.py  stitch_effect.py  template.py  types.py  validation.py
stitch_generator/functions/: __init__.py  add_gap.py  arc_length_mapping.py  bezier.py  de_casteljau.py  (+29 more)
tests/: functions.py  test_all_designs.py  test_calculate_direction.py  test_embroidery_export.py  test_embroidery_import.py  test_embroidery_pattern.py  test_function_modifiers.py  test_function_result_shapes.py  test_function_sequence.py  test_functions_1d.py  test_functions_2d.py  test_inverse_cdf.py  test_linspace.py  test_offset_by_width.py  test_pattern_generator.py  test_remove_duplicates.py  test_rotate.py  test_running_stitch.py  test_sample.py  test_samples.py  test_smooth.py  test_stitch_sequence.py  test_variable_running_stitch.py  test_waves.py
(+187 files in other folders)
