[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitch_generator"
version = "0.1.0"
description = "Stitch generator for machine embroidery"
readme = "README.md"
authors = [{ name = "Tanja Bast", email = "tanja.s.bast@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = ["scipy", "numpy", "noise"]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
]

[project.urls]
"Homepage" = "https://github.com/bastanja/stitch_generator"
