[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitch_generator"
version = "1.0.0-dev"
description = "Stitch generator for machine embroidery"
readme = "README.md"
authors = [{ name = "Tanja Bast", email = "tanja.s.bast@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["scipy", "numpy", "noise"]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
]

[project.urls]
"Homepage" = "https://github.com/bastanja/stitch_generator"

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS", "IGNORE_EXCEPTION_DETAIL"]
