[metadata]
name = stitch_generator
version = 0.0.3
author = Tanja Bast
author_email = tanja.s.bast@gmail.com
description = Stitch generator for machine embroidery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bastanja/stitch_generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

python_requires = >=3.6

install_requires =
    pyembroidery ~= 1.4.29
    numpy ~= 1.20.1
    scipy ~= 1.6.1
    noise ~= 1.2.2

[options.extras_require]
test = 
    pytest

[options.packages.find]
exclude =
    doc*
    tests*
